CustomerId deleted from SaveOrder and SaveComment EP. Now it's calculated from request->user()
