# storage/api/api.yaml
@@ -24,13 +24,11 @@ paths:
           application/json:
             schema:
               type: object
-              required: [text, rating, customerId, providerId]
+              required: [text, rating, providerId]
               properties:
                 text:
                   type: string
                 rating:
-                  type: integer
-                customerId:
                   type: integer
                 providerId:
                   type: integer
@@ -125,7 +123,7 @@ paths:
           application/json:
             schema:
               type: object
-              required: [name, date, price, status, paymentType, customerId, providerId, customerAddress, selectedServices]
+              required: [name, date, price, status, paymentType, providerId, customerAddress, selectedServices]
               properties:
                 name:
                   type: string
@@ -144,8 +142,6 @@ paths:
                   type: string
                 paymentType:
                   type: string
-                customerId:
-                  type: integer
                 providerId:
                   type: integer
                 customerAddress:
@@ -158,7 +154,7 @@ paths:
                     properties:
                       id:
                         type: integer
-                      name:
+                      title:
                         type: string
                       price:
                         type: number
